crates/ferrum-interfaces/tests/ui/vnext/fail/resolved_model_plan_is_not_deserialize.rs
use ferrum_interfaces::vnext::ResolvedModelPlan;

fn main() {
    let _: ResolvedModelPlan = serde_json::from_str("{}").unwrap();
}
